--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,10 +1,10 @@
-$images: './../../assets';
+$images: "./../../assets";
 
 body {
     -webkit-user-select: none;
     user-select: none;
     overflow: hidden;
-    font-size: 0.8em;    
+    font-size: 0.8em;
 }
 
 #display-container {
@@ -13,6 +13,12 @@ body {
     overflow: hidden;
     -webkit-user-select: auto;
     user-select: auto;
+    color: #BBBBBB;
+    font-family: "Courier New", monospace;
+    text-align: left;
+    font-size: 1em;
+    background-color: black;
+    text-shadow: none;
 }
 
 #display {
@@ -85,15 +91,10 @@ body {
     position: absolute;
 }
 
-#advedit .icon {
-    margin-top: 2px;
-    margin-left: 1px;
-}
-
 #find {
     position: absolute;
     display: none;
-    z-index: 100;    
+    z-index: 100;
 }
 
 #find input, #find input:focus {
@@ -114,8 +115,7 @@ body {
     cursor: default;
 }
 
-#find button.active
-{
+#find button.active {
     cursor: default;
 }
 
@@ -127,83 +127,67 @@ body {
     display: none !important;
 }
 
-.button-stretch img, .button-stretch .button-icon
-{
-    margin: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-    font-size: 100% !important;
-}
-
 /** status */
-#status
-{
+#status {
     z-index: 100;
     position: absolute;
     cursor: default;
     box-sizing: border-box;
 }
 
-#status-border
-{
+#status-border {
     position: absolute;
     box-sizing: border-box;
 }
 
 #environment {
     position: absolute;
-    overflow:hidden; 
+    overflow: hidden;
     box-sizing: border-box;
 }
 
-#environmentleft
-{
+#environmentleft {
     position: relative;
-    top:15px;
-    left:0px;
-    float:left;
-    width:50px;
-    height:50px;
+    top: 15px;
+    left: 0px;
+    float: left;
+    width: 50px;
+    height: 50px;
 }
 
-#environmentcenter
-{
+#environmentcenter {
     position: relative;
-    top:5px;
-    left:0px;
-    float:left;
-    width:50px;
-    height:50px;
+    top: 5px;
+    left: 0px;
+    float: left;
+    width: 50px;
+    height: 50px;
 }
 
-#environmentright
-{
+#environmentright {
     position: relative;
-    top:15px;
-    left:0px;
-    float:left;
-    width:50px;
-    height:50px;
+    top: 15px;
+    left: 0px;
+    float: left;
+    width: 50px;
+    height: 50px;
 }
 
-#environmentweather
-{
+#environmentweather {
     position: relative;
-    top:0px;
-    left:0px;
-    width:150px;
-    height:50px;
-    z-index:100;
+    top: 0px;
+    left: 0px;
+    width: 150px;
+    height: 50px;
+    z-index: 100;
 }
 
-#character-name
-{
+#character-name {
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-
-#lefthandweapon{
+#lefthandweapon {
     position: absolute;
 }
 
@@ -223,97 +207,64 @@ body {
     float: right;
 }
 
-#bars
-{
+#bars {
     position: absolute;
     overflow: auto;
     overflow-x: hidden;
     box-sizing: border-box;
 }
 
-.combat-bar
-{
+.combat-bar {
     position: relative;
 }
 
-.combat-name
-{
+.combat-name {
     position: absolute;
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden;    
+    overflow: hidden;
 }
 
-
-.combat-bar .progressbar
-{
+.combat-bar .progressbar {
     position: absolute;
     width: auto;
 }
 
-#body
-{
+#body {
     position: absolute;
     box-sizing: border-box;
 }
 
-#body svg
-{
+#body svg {
     image-rendering: crisp-edges;
 }
 
-#armor, #health, #health.on:hover, #armor.on:hover
-{
+#armor, #health, #health.on:hover, #armor.on:hover {
     position: absolute;
 }
 
-#tail, #leftwing, #rightwing
-{
-    display:none;
+#tail, #leftwing, #rightwing {
+    display: none;
 }
 
-.progressbar
-{
+.progressbar {
     float: right;
     overflow: hidden;
 }
 
-.progressbar .progressbar-text
-{
+.progressbar .progressbar-text {
     position: absolute;
     z-index: 1;
 }
 
-.progressbar .progressbar-value 
-{
+.progressbar .progressbar-value {
     float: right;
 }
 
-#lagMeter
-{
+#lagMeter {
     position: absolute;
     width: auto;
     box-sizing: border-box;
 }
 
 /*end status*/
-
-.button {
-    box-sizing: border-box;
-}
-
-.button .fa, .button-icon {
-    margin-top: 6px;
-    text-align: center;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
-}
-
-.button img, .button-icon {
-    /*margin-left: 7px;*/
-    margin-top: 6px;
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
-}
