--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -1,40 +1,33 @@
-.dialog-footer
-{
+.dialog-footer {
     background-color: #F5F5F5;
     box-shadow: inset 0 1px 0 #fff;
-    position: absolute; 
-    bottom:0; 
-    left:0; 
+    position: absolute;
+    bottom: 0;
+    left: 0;
     right: 0;
     padding: 5px;
     border-top: 1px solid #ddd;
 }
 
-.dialog-body .tab-pane
-{
+.dialog-body .tab-pane {
     padding: 10px;
 }
 
-.dialog-body .nav-tabs li:first-child
-{
+.dialog-body .nav-tabs li:first-child {
     margin-left: 10px;
 }
 
-.dialog-footer .btn
-{
+.dialog-footer .btn {
     margin: 5px;
 }
 
-
-input[type=color]
-{
+input[type=color] {
     padding: 0px;
     height: 24px;
     margin: 2px;
 }
 
-.input-group label
-{
+.input-group label {
     font-weight: normal;
     padding: 0px;
     margin: auto;
@@ -47,8 +40,8 @@ textarea {
 .bootstrap-select .dropdown-toggle:focus {
     border-color: #66afe9;
     outline: none !important;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
 .selected a:focus {
