--- a/src/css/mapper.scss
+++ b/src/css/mapper.scss
@@ -1,53 +1,50 @@
-$mapper : './../../assets/mapper';
-
-#MapperCanvas
-{
-	cursor: default; 
-	border: 1px solid grey;
-	left:30px;
-	top:30px;
+$mapper: './../../assets/mapper';
+#MapperCanvas {
+    cursor: default;
+    border: 1px solid grey;
+    left: 30px;
+    top: 30px;
     right: 30px;
     bottom: 30px;
-	position: absolute;	
-	padding: 0px;
-	margin: 0px;
-	z-index: 1;
-    display: block;	
-	
+    position: absolute;
+    padding: 0px;
+    margin: 0px;
+    z-index: 1;
+    display: block;
 }
 
 .MapperNavButton {
-	height:22px;
-	width:22px; 
-	background: url('#{$mapper}/mappernav.png');
-	background-repeat: no-repeat;
-	position: absolute;
+    height: 22px;
+    width: 22px;
+    background: url('#{$mapper}/mappernav.png');
+    background-repeat: no-repeat;
+    position: absolute;
 }
 
 .MapperNavButton:hover {
-	height:22px;
-	width:22px;
-	background: url('#{$mapper}/mappernav.over.png');
-	background-repeat: no-repeat;
-	position: absolute;
+    height: 22px;
+    width: 22px;
+    background: url('#{$mapper}/mappernav.over.png');
+    background-repeat: no-repeat;
+    position: absolute;
 }
 
-.MapperNavButton:active{
-	height:22px;
-	width:22px;
-	background: url('#{$mapper}/mappernav.down.png');
-	background-repeat: no-repeat;
-	position: absolute;
+.MapperNavButton:active {
+    height: 22px;
+    width: 22px;
+    background: url('#{$mapper}/mappernav.down.png');
+    background-repeat: no-repeat;
+    position: absolute;
 }
 
-#mapper-toolbar
-{
-	background-color: menu;
-	margin-left:2px;
-	margin-right:2px;
-	padding-top: 2px;
-	padding-bottom:2px;
+#mapper-toolbar {
+    background-color: menu;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
+
 
 /*
 #mapper-toolbar a
@@ -60,45 +57,40 @@ $mapper : './../../assets/mapper';
 */
 
 #mapper-toolbar .btn {
-  outline: none !important;
+    outline: none !important;
 }
 
-#mapper-toolbar button
-{
-	min-width: 26px;
+#mapper-toolbar button {
+    min-width: 26px;
 }
 
-#mapper-toolbar input
-{
-	padding: 0px 2px;
-	margin: 0px;
-	width: 60px;
-	float: left;
-	height: 22px;
-	margin-left: 5px;
+#mapper-toolbar input {
+    padding: 0px 2px;
+    margin: 0px;
+    width: 60px;
+    float: left;
+    height: 22px;
+    margin-left: 5px;
 }
 
-#mapper-toolbar .fa-circle
-{
-	color: red;
+#mapper-toolbar .fa-circle {
+    color: red;
 }
 
-#mapper-toolbar select
-{
-	float: left;
-	min-width: 100px;
-	width: auto;
-	padding: 0px 2px;
-	margin: 0px;
-	height: 22px;
-	margin-left: 5px;
+#mapper-toolbar select {
+    float: left;
+    min-width: 100px;
+    width: auto;
+    padding: 0px 2px;
+    margin: 0px;
+    height: 22px;
+    margin-left: 5px;
 }
 
-
-#mapper-toolbar label
-{
-	margin-bottom: 0 !important;
+#mapper-toolbar label {
+    margin-bottom: 0 !important;
 }
+
 
 /*
 #mapper-toolbar span
@@ -111,46 +103,42 @@ $mapper : './../../assets/mapper';
 }
 */
 
-#mapper-body
-{
-	top:26px;
-	bottom:0;
-	left:0;
-	right:0;
-	position: absolute;
-	box-shadow: 0px 0px 40px 10px rgb(125, 107, 83) inset;
-	background-color: #eae4d6;
+#mapper-body {
+    top: 26px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    box-shadow: 0px 0px 40px 10px rgb(125, 107, 83) inset;
+    background-color: #eae4d6;
 }
 
-#mapper-room
-{
-	width:180px;
-	top:26px;
-	right: 0;
-	bottom: 0;
-	position: absolute;
-	background-color: menu;
-	z-index: 1000;
-	display: none;
-	margin: 0px;
+#mapper-room {
+    width: 180px;
+    top: 26px;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: menu;
+    z-index: 1000;
+    display: none;
+    margin: 0px;
 }
 
-#mapper-room .form-group
-{
-	margin: 0;
+#mapper-room .form-group {
+    margin: 0;
 }
 
 a.disabled-link,
-a.disabled-link:visited ,
+a.disabled-link:visited,
 a.disabled-link:active,
 a.disabled-link:hover {
-    color:#aaa !important;
-	background-image: none !important;
-	background-color: transparent !important;
-	cursor: default;
+    color: #aaa !important;
+    background-image: none !important;
+    background-color: transparent !important;
+    cursor: default;
 }
 
-#select-area
-{
-	max-width: 150px;
+#select-area {
+    max-width: 150px;
 }
