--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -10,14 +10,16 @@
     font-size: 30px;
 }
 
-.button-stretch img, .button-stretch .button-icon {
+.button-stretch img,
+.button-stretch .button-icon {
     margin: 0 !important;
     width: 100% !important;
     height: 100% !important;
     font-size: 100% !important;
 }
 
-.button .fa, .button-icon {
+.button .fa,
+.button-icon {
     margin-top: 6px;
     text-align: center;
     width: 20px;
@@ -26,7 +28,8 @@
     vertical-align: top;
 }
 
-.button img, .button-icon {
+.button img,
+.button-icon {
     display: block;
     margin-top: 6px;
     margin-left: 6px;
@@ -40,7 +43,8 @@
     position: relative;
 }
 
-.button-sm .fa, .button-sm.on .fa {
+.button-sm .fa,
+.button-sm.on .fa {
     margin-top: 1px;
     margin-left: 0;
     width: 16px;
@@ -48,19 +52,22 @@
     font-size: 14px;
 }
 
-.button-sm, .button-sm.on {
+.button-sm,
+.button-sm.on {
     width: 18px;
     height: 18px;
     font-size: 16px;
 }
 
-.button-sm img, .button-sm.on img {
+.button-sm img,
+.button-sm.on img {
     height: 16px;
     width: 16px;
     margin: 1px;
 }
 
-.button-sm svg, .button-sm.on svg {
+.button-sm svg,
+.button-sm.on svg {
     top: 0px;
     position: relative;
 }
